syntax = "proto3";

// Require Go Package
option go_package = "/models";

// Cardinal: Designation for the Compass Direction Value
enum Cardinal {
  N = 0;     // North
  NbE = 1;   // North by East
  NNE = 2;   // North North East
  NEbN = 3;  // NorthEast by North
  NE = 4;    // North East
  NEbE = 5;  // NorthEast by East
  ENE = 6;   // East North East
  EbN = 7;   // East by North
  E = 8;     // East
  EbS = 9;   // East by South
  ESE = 10;  // East South East
  SEbE = 11; // SouthEast by East
  SE = 12;   // South East
  SEbS = 13; // SouthEast by South
  SSE = 14;  // South South East
  SbE = 15;  // South by East
  S = 16;    // South
  SbW = 17;  // South by West
  SSW = 18;  // South South West
  SWbS = 19; // SouthWest by South
  SW = 20;   // South West
  SWbW = 21; // SouthWest by West
  WSW = 22;  // West South West
  WbS = 23;  // West by South
  W = 24;    // West
  WbN = 25;  // West by North
  WNW = 26;  // West North West
  NWbW = 27; // North West by West
  NW = 28;   // North West
  NWbN = 29; // North West by North
  NNW = 30;  // North North West
  NbW = 31;  // North by West
}

// For Info about Lobby
message Lobby {
  TopicType type = 1;          // Type of Lobby
  map<string, Peer> peers = 2; // Total Data of Active Peers
  Peer user = 3;               // User Peer reference
  Info info = 4;               // Lobby Info
  Status status = 5;

  enum Status {
    Empty = 0; // When there are No Peers in Local Topic
    Few = 1;   // When there are <= 5 Peers in Local Topic
    Many = 2;  // When there are > 5 Peers in Local Topic
  }

  message Info {
    string name = 1;       // Topic without Prefix
    string topic = 2;      // Full Topic Address
    Location location = 3; // Topic Location
  }
}

// Message Sent when peer messages Local Topic
message LobbyEvent {
  TopicType type = 1;  // Event Topic Type
  string id = 3;       // Peer ID
  Peer peer = 4;       // User Information
  Subject subject = 2; // Local Event Subject

  // Local Type Event
  enum Subject {
    JOIN = 0;    // Peer has joined wants Info
    STANDBY = 1; // Peer is taking break from lobby
    RESUME = 2;  // Peer has rejoined Lobby
    UPDATE = 3;  // Peer has changed position
    EXIT = 4;    // Peer has Exited
  }
}

// Location from GeoIP and OLC information
message Location {
  string city = 1;
  string state = 2;
  string continent = 3;
  string country = 4;
  double latitude = 5;
  double longitude = 6;
}

// Basic Info Sent to Peers to Establish Connections
message Peer {
  string sName = 1;          // User Sonr Domain
  ID id = 2;                 // ID references
  Platform platform = 3;     // Peers Device Platform
  string model = 4;          // Peers Device Model
  Position position = 5;     // Peers Positional Information
  Profile profile = 6;       // Peers General Information
  Properties properties = 7; // Peer specific options set

  // ID References
  message ID {
    string peer = 1;      // Host PeerID
    string device = 2;    // Device ID
    string multiAddr = 4; // Peer MultiAddr
    bytes publicKey = 5;  // Public Key of Peer
  }

  // Properties
  message Properties {
    // Whether Peer can use automatic point to Transfer
    bool enabledPointShare = 1;
    bool isFlatMode = 2;
  }
}

// Record of Peer stored in Threads DB
message PeerInstance {
  string sName = 1;     // User Sonr Domain
  string peerID = 2;    // Libp2p Peer ID
  string multiAddr = 3; // Peer MultiAddress Format
  string firstName = 4; // Peer First Name
  bool isActive = 5;    // If Peer is Active Now
  bool isReachable = 6; // If Peer has allowed Remote Calls
}

// Platform is the Operating System of Device
enum Platform {
  Undefined = 0;
  Android = 1;
  IOS = 2;
  MacOS = 3;
  Windows = 4;
  Linux = 5;
  Web = 6;
}

// Position Includes All Directional Info of Peer
message Position {
  Compass facing = 1;              // Compass Direction of Peer on Z axis
  Compass heading = 2;             // Compass Direction of Peer on X axis
  Proximity proximity = 3;         // Proximity from the User - Calculated
  Accelerometer accelerometer = 4; // Accelerometer Values
  Orientation orientation = 5;     // Orientation Values

  // Accelerometer Sensor Values
  message Accelerometer {
    double x = 1; // X-Axis Value
    double y = 2; // Y-Axis Value
    double z = 3; // Z-Axis Value
  }

  // Compass Direction Values
  message Compass {
    Cardinal cardinal = 1;     // Cardinal Designation of normal Value
    Cardinal antiCardinal = 2; // Cardinal Designation of Antipodal Value
    double direction = 3;      // Normal Compass Value
    double antipodal = 4;      // Inverse Compass Direction of Peer
  }

  // Euler Angle Orientation
  message Orientation {
    double pitch = 1;
    double roll = 2;
    double yaw = 3;
  }

  // Proximity is the Distance between Peers, from Ultrasonic
  enum Proximity {
    NotFound = 0;  // Unable to Calculate
    Immediate = 1; // Within 5 Meters
    Near = 2;      // Within 10 Meters
    Distant = 3;   // Within 15 Meters
  }
}

// General Information about Peer passed during Authentication
message Profile {
  string sName = 1;      // Sonr Based Username
  string firstName = 2;  // General Info
  string lastName = 3;   // General Info
  bytes picture = 4;     // Profile Picture
  Platform platform = 5; // Peers Device Operating System
}

// Lobby Topic Type
enum TopicType {
  LOCAL = 0;  // Nearby Peers Topic
  DEVICE = 1; // User Devices Topic
  GROUP = 2;  // User Custom Group Topic
}
